syntax = "proto3";

option go_package = "/protobuf";

package protobuf;

import "google/protobuf/empty.proto";

message GeneralRequest {
    string method = 1;
    string url = 2;
    map<string, string> header = 3;
    bytes body = 4;
    string requiring_endpoint = 5;
    string requiring_method = 6;
}

message GetRequest {
    string url = 1;
    map<string, string> header = 2;
    string requiring_endpoint = 5;
    string requiring_method = 6;
}

message PostRequest {
    string url = 1;
    map<string, string> header = 2;
    bytes body = 3;
    string requiring_endpoint = 5;
    string requiring_method = 6;
}

message PutRequest{
    string url = 1;
    map<string, string> header = 2;
    bytes body = 3;
    string requiring_endpoint = 5;
    string requiring_method = 6;
}

message DeleteRequest {
    string url = 1;
    map<string, string> header = 2;
    string requiring_endpoint = 5;
    string requiring_method = 6;
}

message Response {
    string status = 1;
    int32 status_code = 2;
    string proto = 3;
    int32 proto_major = 4;
    int32 proto_minor = 5;
    map<string, string> header = 6;
    bytes body = 7;
    int64 content_length = 8;
    bool is_from_alternative_endpoint = 9;
}

message Status {
    string endpoint = 1;
    string status = 2;
    uint32 timeout = 3;
    string timestamp = 4;
}

service CircuitBreaker {
    rpc General(GeneralRequest) returns (Response) {}
    rpc Get(GetRequest) returns (Response) {}
    rpc Post(PostRequest) returns (Response) {}
    rpc Put(PutRequest) returns (Response) {}
    rpc Delete(DeleteRequest) returns (Response) {}
}
